--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,9 @@
-<h1>
-    LOG IN PAGE
-</h1>
-<form method="POST">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="login">
-</form>
+<html>
+    <h1>
+        LOG IN PAGE
+    </h1>
+    <form method="POST">{% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="login">
+    </form>
+</html>
