--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,20 @@
 <html>
-    <h1>
-        HEYYY
-    </h1>
-    <a href="/login">LOGIN</a>
-    <a href="/signup">SIGNUP</a>
-
+    <head>
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'home.css' %}">
+    </head>
+    {% if user.is_authenticated %}
+        <a href="accounts/logout">LOGOUT</a>
+        <p>{{ request.user }}</p>
+        <div>
+            {% for idea in Idea %}
+                <div>
+                    <h3>{{ idea.title }}</h3>
+                </div>
+            {% endfor %}
+        </div>
+    {% else %}
+        <a href="accounts/login">LOGIN</a>
+        <a href="/signup">SIGNUP</a>
+    {% endif %}
 </html>
