--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,17 @@
 <html>
-    <h1>
-        LOG IN PAGE
-    </h1>
-    <form method="POST">{% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="login">
-    </form>
+    <head>
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'login.css' %}">
+    </head>
+    <body>
+        <div>
+            <h1>
+                LOG IN PAGE
+            </h1>
+            <form method="POST">{% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="login">
+            </form>
+        </div>
+    </body>
 </html>
