--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,7 @@
             {% for idea in Idea %}
                 <div>
                     <h3>{{ idea.title }}</h3>
+                    <a href = "{% url 'idea_view' idea.id %}">view</a>
                 </div>
             {% endfor %}
         </div>
