--- a/static/signup.css
+++ b/static/signup.css
@@ -1,5 +1,6 @@
 *{
-    font-family: 'Georgia', sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 300;
     box-sizing: border-box;
 }
 body{
@@ -57,6 +58,7 @@ input:hover
     background-color: rgb(23, 84, 81 );
     color: white;
     font-weight: 300;
+    font-size: 24px;
     height: 44px;
     width: 30%;
     border-radius: 5px;
@@ -68,6 +70,7 @@ input:hover
 .login_box{
     
     background-color:rgb(214, 234, 233);
+    margin-top: 125px;
     height:600px;
     width:500px;
     border-radius: 25px;
