--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="basicnav">
-            <a class="nav_opt" href="/login.html">Home</a>
+            <a class="nav_opt" href="{% url 'home_view'  %}">Home</a>
             <a class="nav_opt" href="#about">About</a>
         </div>
         <div class="main">
