--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
     {% if user.is_authenticated %}
         <a href="accounts/logout">LOGOUT</a>
         <p>{{ request.user }}</p>
+        <a href="{% url 'add_idea' %}">ADD JOB</a>
         <div>
             {% for idea in Idea %}
                 <div>
