--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,9 @@
     {% if user.is_authenticated %}
         <a href="accounts/logout">LOGOUT</a>
         <p>{{ request.user }}</p>
+        <a href="{% url 'my_ideas' %}">YOUR IDEAS</a>
         <a href="{% url 'add_idea' %}">ADD JOB</a>
+
         <div>
             {% for idea in Idea %}
                 <div>
