--- a/idea/templates/idea.html
+++ b/idea/templates/idea.html
@@ -2,6 +2,13 @@
     <p>
     {% if idea.created_by == request.user  %}
         {{ idea.title }}
+        <h5>Users Applied : </h5>
+        {% for user in applied_users %}
+                <div>
+                    <h3>{{ user.name }}</h3>
+                    <a href = "#">view</a>
+                </div>
+        {% endfor %}
     {% else %}
         {{ idea.title }}
         {{ idea.short_description }}
@@ -9,7 +16,8 @@
         {{ created_by.name }}
         {{ idea.created_at }}
         {{ idea.updated_at }}
-        <a href="#">COLLAB</a>
+        {{ idea.id }}
+        <a href="{% url 'collab' idea.id %}">COLLAB</a>
     {% endif %}
     </p>
 </html>
