--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 <html>
     <head>
         {% load static %}
-        <link rel="stylesheet" href="{% static 'home.css' %}">
+        <link rel="stylesheet" href="{% static 'mainPg.css' %}">
+        
     </head>
+    <body>
     {% if user.is_authenticated %}
         <a href="accounts/logout">LOGOUT</a>
         <p>{{ request.user }}</p>
@@ -21,4 +24,5 @@
         <a href="accounts/login">LOGIN</a>
         <a href="/signup">SIGNUP</a>
     {% endif %}
+    </body>
 </html>
