--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
         <a href="accounts/logout">LOGOUT</a>
         <p>{{ request.user }}</p>
         <a href="{% url 'my_ideas' %}">YOUR IDEAS</a>
-        <a href="{% url 'add_idea' %}">ADD JOB</a>
+        <a href="{% url 'add_idea' %}">ADD IDEA</a>
         <a href="{% url 'profile' request.user %}">PROFILE</a>
         <div>
             {% for idea in Idea %}
