--- a/static/mainPg.css
+++ b/static/mainPg.css
@@ -1,3 +1,120 @@
-h3{
+*{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 300;
+    box-sizing: border-box;
+}
+label{
+    color:red;
+}
+body{
+    background-color: rgb(46, 149, 144);
+}
+a {
+    text-decoration: none;
+}
+.main{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 10px;
+}
+.user_opts{
+
+    display: flex;
+    width: 60%;
+    justify-content: space-between;
+    flex-direction: row;
+}
+.user_opts a{
+    background-color: rgb(31, 114, 110);
+    padding: 1em 1.5em;
+    color: white;
+    border-radius: 15px;
+}
+.user_opts a:hover{
+    background-color: rgb(96, 143, 141);;
+}
+.ideas {
+
+    width: 60%; 
+    margin-top: 20px;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 10px;
+    row-gap: 15px;
+    justify-content: space-evenly;
+    place-items: center;
+    
+}
+.item {
+
+    place-self: center stretch;
+    border-radius:15px;
+    background-color:rgb(210, 233, 232);
+    padding-left: 10px;
+    padding-bottom: 10px;
+
+}
+.item a{
+    color: gray;
+}
+.item a:hover{
     color: black;
 }
+.basicnav {
+    
+    background-color:  rgb(23, 84, 81 );
+    height: fit-content;
+    width: 100%;
+    margin:0;
+    overflow: auto;
+   
+  }
+nav {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+}
+.basicnav .dropdown {
+    float:right;
+    display: block;
+}
+.basicnav .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.basicnav .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+.basicnav .dropdown:hover .dropdown-content {
+    display: block;
+}  
+.basicnav .dropdown-content a:hover {background-color: #f1f1f1;}
+.basicnav a {
+    float: left;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 14px;
+}
+.basicnav a:hover {
+    background-color: rgb(31, 114, 110);
+}
+
+  
+
