--- a/idea/templates/add_idea.html
+++ b/idea/templates/add_idea.html
@@ -1,4 +1,9 @@
+{% load static %}
+<!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="{% static 'login.css' %}">
+    </head>
     <body>
         <form method="POST">{% csrf_token %}
             {{ form.as_p }}
