--- a/static/mainPg.css
+++ b/static/mainPg.css
@@ -13,13 +13,12 @@ a {
     text-decoration: none;
 }
 .main{
-    width: 100%;
-    height: 100%;
+    
+    height: 60vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    align-content: center;
     gap: 10px;
 }
 .user_opts{
@@ -83,35 +82,35 @@ nav {
 	left: 0;
 	right: 0;
 }
-.basicnav link:hover {
+.basicnav a:hover {
     background-color: rgb(31, 114, 110);
 }
 .basicnav .dropdown {
     float:right;
-    display: block;
 }
-.basicnav .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+.basicnav .dropdown-content:hover {
+
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    justify-content: space-evenly;
+    place-items: center;
+    left: 0;
 }
-.basicnav .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+.basicnav  .dropdown-content:hover + .dropdown-content a {
+
+    background-color: rgb(1, 24, 23);
+    place-self: center stretch;
+    padding: 1em 1.5em;
     text-decoration: none;
-    display: block;
-    text-align: left;
+    
 }
 
-.basicnav .dropdown:hover .dropdown-content {
-    display: block;
-}  
+/*.basicnav .dropdown:hover + .dropdown-content {
+    visibility: visible;
+}  */
 .basicnav .dropdown-content a:hover {background-color: #f1f1f1;}
 
-.basicnav link {
+.basicnav a {
     float: left;
     color: white;
     text-align: center;
