--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -1,3 +1,13 @@
+{% load static %}
+<!DOCTYPE html>
 <html>
-    <p>{{ user.Username }}</p>
+    <head>
+        <link rel="stylesheet" href="{% static 'mainPg.css' %}">
+    </head>
+    <body>
+        <nav class="basicnav">
+            <a class="link" href="{% url 'home_view'  %}">Home</a>
+        </nav>
+        <h1 class="main">{{ user.Username }}</h1>
+    </body>
 </html>
